@@ -8,6 +8,7 @@ that have happened to the libwcl library
 2006-06-07
 o Fix up pkg-config setup for libraw1394
 o Add libwcl pkg-config support viw libwcl.pc
+o Added a check to where to put the .pc file
 
 2006-06-06
 o Fix up platform defines. 
